# aleph

./: '  .gitignore  Cargo.toml  LICENSE  README.md  contributors.txt  flake.nix  testedpkgs.csv
src/: lib.rs  luaconfig.rs  main.rs  zipper.rs
src/cli/: mod.rs  subcommands.rs
src/errors/: extraction.rs
src/manifest/: architecture.rs  bin.rs  installer.rs  license.rs  mod.rs  persist.rs  shortcuts.rs  uninstaller.rs
src/powershell/: installer.rs  mod.rs  profile_util.rs  uninstaller.rs  utilities.rs
src/scoopd/: manifest_install.rs  manifest_uninstall.rs  mod.rs
tests/: bin_test.rs  bucket_install_test.rs  bulk_parse_test.rs  install_test.rs  lua.rs  manifest_test.rs  playground.rs  serde_test.rs  shortcut_test.rs  temp_install_rewrite_test.rs
tests/bulk_data/: 1password-cli.json  adb.json  alist.json  ant.json  argocd-autopilot.json  astyle.json  aws-amplify.json  azcopy.json  base64.json  bento4.json  coreutils.json  cscope.json  dart-sass-embedded.json  delta.json  dhall.json  djvulibre.json  docker-pushrm.json  dotcover-clt.json  draft.json  handbrake-cli.json  helix.json  highs.json  hub.json  idris.json  innoextract.json  istioctl.json  jdtls.json  jojodiff.json  jx.json  pnpm.json  postgrest.json  presentmon.json  protolint.json  ptags.json  pyflow.json  qr.json  racket-minimal.json  rancher-cli.json  realm.json  vmaf.json  (+9 more)
tests/sample_data/: UNLICENSE  apngasm.json  autoit.json  busybox.json  config.lua  cowsay.json  irfanview.json  required_attrs.json  str_or_struct_attrs.json
