[package]
name = "aleph"
version = "0.0.40"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
sevenz-rust = { version = "0.6.1", features = ["zstd", "bzip2"] }
zip = "2.2.0"
zip-extract = { version = "0.2.1", features = ["bzip2", "default", "xz", "zstd", "lzma"] }
