[package]
name = "aleph"
version = "0.0.50"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.10.3", features = ["luajit", "serialize", "vendored"] }
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
